Can hide and increase buttons styling

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         </ul>
       </li>
       <li id="btn-ecopoints" class="panel-item"><img class="panel-icon-eye-close hide" src="./assets/icons/panel/eye-close.svg" alt=""><img class="panel-icon-eye-open" src="./assets/icons/panel/eye-open.svg" alt=""><span>Points de collecte des déchets</span></li>
-      <li class="panel-item panel-item--inactive"><img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt=""><img class="panel-icon-eye-open hide" src="./assets/icons/panel/eye-open.svg" alt=""><span>Parc de jeux</span></li>
-      <li class="panel-item panel-item--inactive"><img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt=""><img class="panel-icon-eye-open hide" src="./assets/icons/panel/eye-open.svg" alt=""><span>Parkings</span></li>
-      <li class="panel-item panel-item--inactive"><img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt=""><img class="panel-icon-eye-open hide" src="./assets/icons/panel/eye-open.svg" alt=""><span>Promenades</span></li>
+      <li id="btn-parcs" class="panel-item panel-item--inactive"><img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt=""><img class="panel-icon-eye-open hide" src="./assets/icons/panel/eye-open.svg" alt=""><span>Parc de jeux</span></li>
+      <li id="btn-parkings"  class="panel-item panel-item--inactive"><img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt=""><img class="panel-icon-eye-open hide" src="./assets/icons/panel/eye-open.svg" alt=""><span>Parkings</span></li>
+      <li id="btn-promenades" class="panel-item panel-item--inactive"><img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt=""><img class="panel-icon-eye-open hide" src="./assets/icons/panel/eye-open.svg" alt=""><span>Promenades</span></li>
       <li class="panel-item panel-item--inactive"><img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt=""><img class="panel-icon-eye-open hide" src="./assets/icons/panel/eye-open.svg" alt=""><span>Toilettes publiques</span></li>
     </ul>
   </div>
