Hide modals when clicking on buttons.

--- a/index.html
+++ b/index.html
@@ -6485,6 +6485,7 @@
     }
 
     function handleClick(e) {
+      hideModales();
       e.preventDefault();
       let container = document.querySelector('#troinex');
       let rect = container.getBBox();
