--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 		<title>Troinex</title>
 	</head>
 	<body>
+
+    <div id="container-show-panel" class="hide">
+      <svg id="icon-show-panel" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
+        <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
+      </svg>
+    </div>
+
 		<!-- modale lieu d'intêret -->
 		<div class="lieu_interet_modal hide">
 			<div class="modal_pointer"></div>
@@ -82,7 +90,14 @@
 		<!-- fin modale transport -->
 
 		<div id="panel">
-			<div id="panel-container">
+      <div id="panel-container">
+        <div id="container-hide-panel">
+          <svg id="icon-hide-panel" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-left" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+            <path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+          </svg>
+        </div>
+
 				<ul id="panel-ul">
 					<li id="btn-transports" class="panel-item panel-item--inactive">
 						<img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt="" /><img
@@ -173,6 +188,9 @@
 					</li>
 				</ul>
 			</div>
+
+      
+
 		</div>
 		<div class="graph">
 			<svg
