continue to improve the responsive for ecopoints

--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 							class="panel-icon-eye-open hide"
 							src="./assets/icons/panel/eye-open.svg"
 							alt=""
-						/><span>Arrêts TPG</span>
+						/><span class="panel-item-label">Arrêts TPG</span>
 					</li>
 					<li id="btn-locations" class="panel-item panel-item-locations">
 						<img class="panel-icon-eye-close hide" src="./assets/icons/panel/eye-close.svg" alt="" /><img
 							class="panel-icon-eye-open"
 							src="./assets/icons/panel/eye-open.svg"
 							alt=""
-						/><span>Lieux d'intérêt</span
+						/><span class="panel-item-label">Lieux d'intérêt</span
 						><img class="panel-icon-more panel-icon-more--active" src="./assets/icons/panel/arrow.svg" alt="" />
 					</li>
 					<li id="panel-item-locations" class="panel-item-extensible">
@@ -156,35 +156,35 @@
 							class="panel-icon-eye-open"
 							src="./assets/icons/panel/eye-open.svg"
 							alt=""
-						/><span>Points de collecte des déchets</span>
+						/><span class="panel-item-label">Points de collecte des déchets</span>
 					</li>
 					<li id="btn-parcs" class="panel-item panel-item--inactive">
 						<img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt="" /><img
 							class="panel-icon-eye-open hide"
 							src="./assets/icons/panel/eye-open.svg"
 							alt=""
-						/><span>Parc de jeux</span>
+						/><span class="panel-item-label">Parc de jeux</span>
 					</li>
 					<li id="btn-parkings" class="panel-item panel-item--inactive">
 						<img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt="" /><img
 							class="panel-icon-eye-open hide"
 							src="./assets/icons/panel/eye-open.svg"
 							alt=""
-						/><span>Parkings</span>
+						/><span class="panel-item-label">Parkings</span>
 					</li>
 					<li id="btn-promenades" class="panel-item panel-item--inactive">
 						<img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt="" /><img
 							class="panel-icon-eye-open hide"
 							src="./assets/icons/panel/eye-open.svg"
 							alt=""
-						/><span>Promenades</span>
+						/><span class="panel-item-label">Promenades</span>
 					</li>
 					<li class="panel-item panel-item--inactive">
 						<img class="panel-icon-eye-close" src="./assets/icons/panel/eye-close.svg" alt="" /><img
 							class="panel-icon-eye-open hide"
 							src="./assets/icons/panel/eye-open.svg"
 							alt=""
-						/><span>Toilettes publiques</span>
+						/><span class="panel-item-label">Toilettes publiques</span>
 					</li>
 				</ul>
 			</div>
