change modal link color

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<img class="lieu_interet_image" />
 			<h1 class="lieu_interet_titre"></h1>
 			<p class="lieu_interet_description"></p>
-			<a target="_blank" class="lieu_interet_url" href="">Voir la page associée</a>
+			<a target="_blank" class="link_modal lieu_interet_url" href="">Voir la page associée</a>
 		</div>
 		<!-- fin modale lieu d'intêret -->
 
