change icon to become white

--- a/index.html
+++ b/index.html
@@ -13011,7 +13011,7 @@
 							<tspan class="cls-54" x="52.02" y="0">r</tspan>
 							<tspan x="54.21" y="0">gnat</tspan>
 						</text>
-						<text class="cls-29" transform="translate(431.55 235.28) rotate(-58.11)">
+						<text class="neighborhood cls-29" transform="translate(431.55 235.28) rotate(-58.11)">
 							<tspan x="0" y="0">Ch. Sous-le-C</tspan>
 							<tspan class="cls-54" x="42.79" y="0">r</tspan>
 							<tspan class="cls-66" x="44.99" y="0">êt</tspan>
@@ -13225,11 +13225,11 @@
 						</text>
 					</g>
 					<g id="COMMUNES">
-						<text class="cls-40" transform="translate(386.01 416.81)"><tspan x="0" y="0">TROINEX</tspan></text>
+						<text class="cls-40" transform="translate(386.01 416.81)"><tspan class="neighborhood" x="0" y="0">TROINEX</tspan></text>
 						<text class="cls-39" transform="translate(714.69 116.66)">
-							<tspan x="0" y="0">v</tspan>
-							<tspan class="cls-25" x="10.81" y="0">e</tspan>
-							<tspan x="20.76" y="0">yrier</tspan>
+							<tspan class="neighborhood" x="0" y="0">v</tspan>
+							<tspan class="neighborhood" class="cls-25" x="10.81" y="0">e</tspan>
+							<tspan class="neighborhood" x="20.76" y="0">yrier</tspan>
 						</text>
 						<g>
 							<path
@@ -13352,9 +13352,9 @@
 							/>
 						</g>
 						<text class="cls-39" transform="translate(570.2 781.64)">
-							<tspan x="0" y="0">boss</tspan>
-							<tspan class="cls-24" x="43.51" y="0">e</tspan>
-							<tspan class="cls-64" x="53.46" y="0">y</tspan>
+							<tspan class="neighborhood" x="0" y="0">boss</tspan>
+							<tspan class="neighborhood" class="cls-24" x="43.51" y="0">e</tspan>
+							<tspan class="neighborhood" class="cls-64" x="53.46" y="0">y</tspan>
 						</text>
 					</g>
 					<g id="LOISIRS-2" data-name="LOISIRS">
