continue to compact the panel and better responsive

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						><img class="panel-icon-more panel-icon-more--active" src="./assets/icons/panel/arrow.svg" alt="" />
 					</li>
 					<li id="panel-item-locations" class="panel-item-extensible">
-						<ul>
+						<ul id="container-subitems-location">
 							<li class="panel-subitem-location" data-locaid="lieu_interet1">
 								<span class="panel-item-extensible-number">1</span>Mairie
 							</li>
