remove promenade text when disabled.

--- a/index.html
+++ b/index.html
@@ -13838,41 +13838,41 @@
 						</g>
 					</g>
 					<g id="PROMENADES">
-						<text class="cls-31" transform="translate(265.75 495.84) rotate(-58.01)">
+						<text class="cls-31 promenade hide" transform="translate(265.75 495.84) rotate(-58.01)">
 							<tspan x="0" y="0">P</tspan>
 							<tspan class="cls-57" x="4.02" y="0">r</tspan>
 							<tspan x="6.22" y="0">omenade des Bocage</tspan>
 						</text>
-						<text class="cls-31" transform="translate(378.67 500.97) rotate(-100.56)">
+						<text class="cls-31 promenade hide" transform="translate(378.67 500.97) rotate(-100.56)">
 							<tspan x="0" y="0">P</tspan>
 						</text>
-						<text class="cls-31" transform="translate(377.95 497.02) rotate(-99.76)"><tspan x="0" y="0">r</tspan></text>
-						<text class="cls-31" transform="translate(377.57 494.86) rotate(-99.22)"><tspan x="0" y="0">o</tspan></text>
-						<text class="cls-31" transform="translate(376.9 490.79) rotate(-98.6)"><tspan x="0" y="0">m</tspan></text>
-						<text class="cls-31" transform="translate(376.02 484.9) rotate(-98.17)"><tspan x="0" y="0">e</tspan></text>
-						<text class="cls-31" transform="translate(375.47 481.05) rotate(-97.9)"><tspan x="0" y="0">n</tspan></text>
-						<text class="cls-31" transform="translate(374.94 477.21) rotate(-97.69)"><tspan x="0" y="0">a</tspan></text>
-						<text class="cls-31" transform="translate(374.45 473.61) rotate(-97.5)"><tspan x="0" y="0">d</tspan></text>
-						<text class="cls-31" transform="translate(373.89 469.37) rotate(-97.32)"><tspan x="0" y="0">e</tspan></text>
-						<text class="cls-31" transform="translate(373.4 465.51) rotate(-97.21)"><tspan x="0" y="0"></tspan></text>
-						<text class="cls-31" transform="translate(373.15 463.58) rotate(-97.1)"><tspan x="0" y="0">d</tspan></text>
-						<text class="cls-31" transform="translate(372.62 459.35) rotate(-96.94)"><tspan x="0" y="0">e</tspan></text>
-						<text class="cls-31" transform="translate(372.15 455.47) rotate(-96.63)"><tspan x="0" y="0">s</tspan></text>
-						<text class="cls-31" transform="translate(371.81 452.54) rotate(-96.37)"><tspan x="0" y="0"></tspan></text>
-						<text class="cls-31" transform="translate(371.59 450.61) rotate(-95.99)"><tspan x="0" y="0">B</tspan></text>
-						<text class="cls-31" transform="translate(371.14 446.22) rotate(-95.53)"><tspan x="0" y="0">i</tspan></text>
-						<text class="cls-31" transform="translate(370.97 444.56) rotate(-95.12)"><tspan x="0" y="0">s</tspan></text>
-						<text class="cls-31" transform="translate(370.71 441.6) rotate(-94.57)"><tspan x="0" y="0">-</tspan></text>
-						<text class="cls-31" transform="translate(370.52 439.29) rotate(-93.69)"><tspan x="0" y="0">d</tspan></text>
-						<text class="cls-31" transform="translate(370.24 435.05) rotate(-92.17)"><tspan x="0" y="0">e</tspan></text>
-						<text class="cls-31" transform="translate(370.1 431.2) rotate(-90.46)"><tspan x="0" y="0">-</tspan></text>
-						<text class="cls-31" transform="translate(370.06 428.92) rotate(-87.76)"><tspan x="0" y="0">T</tspan></text>
-						<text class="cls-31" transform="translate(370.18 425.64) rotate(-84.25)"><tspan x="0" y="0">r</tspan></text>
-						<text class="cls-31" transform="translate(370.29 423.58) rotate(-76.12)"><tspan x="0" y="0">o</tspan></text>
-						<text class="cls-31" transform="translate(371.31 419.65) rotate(-72.23)"><tspan x="0" y="0">i</tspan></text>
-						<text class="cls-31" transform="translate(371.79 418.09) rotate(-70.01)"><tspan x="0" y="0">n</tspan></text>
-						<text class="cls-31" transform="translate(373.11 414.46) rotate(-67.97)"><tspan x="0" y="0">e</tspan></text>
-						<text class="cls-31" transform="translate(374.56 410.91) rotate(-66.66)"><tspan x="0" y="0">x</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(377.95 497.02) rotate(-99.76)"><tspan x="0" y="0">r</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(377.57 494.86) rotate(-99.22)"><tspan x="0" y="0">o</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(376.9 490.79) rotate(-98.6)"><tspan x="0" y="0">m</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(376.02 484.9) rotate(-98.17)"><tspan x="0" y="0">e</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(375.47 481.05) rotate(-97.9)"><tspan x="0" y="0">n</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(374.94 477.21) rotate(-97.69)"><tspan x="0" y="0">a</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(374.45 473.61) rotate(-97.5)"><tspan x="0" y="0">d</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(373.89 469.37) rotate(-97.32)"><tspan x="0" y="0">e</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(373.4 465.51) rotate(-97.21)"><tspan x="0" y="0"></tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(373.15 463.58) rotate(-97.1)"><tspan x="0" y="0">d</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(372.62 459.35) rotate(-96.94)"><tspan x="0" y="0">e</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(372.15 455.47) rotate(-96.63)"><tspan x="0" y="0">s</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(371.81 452.54) rotate(-96.37)"><tspan x="0" y="0"></tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(371.59 450.61) rotate(-95.99)"><tspan x="0" y="0">B</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(371.14 446.22) rotate(-95.53)"><tspan x="0" y="0">i</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(370.97 444.56) rotate(-95.12)"><tspan x="0" y="0">s</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(370.71 441.6) rotate(-94.57)"><tspan x="0" y="0">-</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(370.52 439.29) rotate(-93.69)"><tspan x="0" y="0">d</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(370.24 435.05) rotate(-92.17)"><tspan x="0" y="0">e</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(370.1 431.2) rotate(-90.46)"><tspan x="0" y="0">-</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(370.06 428.92) rotate(-87.76)"><tspan x="0" y="0">T</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(370.18 425.64) rotate(-84.25)"><tspan x="0" y="0">r</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(370.29 423.58) rotate(-76.12)"><tspan x="0" y="0">o</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(371.31 419.65) rotate(-72.23)"><tspan x="0" y="0">i</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(371.79 418.09) rotate(-70.01)"><tspan x="0" y="0">n</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(373.11 414.46) rotate(-67.97)"><tspan x="0" y="0">e</tspan></text>
+						<text class="cls-31 promenade hide" transform="translate(374.56 410.91) rotate(-66.66)"><tspan x="0" y="0">x</tspan></text>
 					</g>
 				</g>
 				<g id="PICTOGRAMMES">
